--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <h1>Random Joke Generator</h1>
+  <h1>Random Joke </h1>
   <p>Click below for a random joke!</p>
   <div id="joke">Your joke will appear here...</div>
   <button onclick="generateJoke()">Get a Joke</button>
