updated code with ads

--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@
 
   <script src="script.js"></script>
 </body>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1703836216243372"
+     crossorigin="anonymous"></script>
 </html>
