--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Random Joke </h1>
   <p>Click below for a random joke!</p>
   <div id="joke">Your joke will appear here...</div>
-  <button onclick="generateJoke()">Get a Joke</button>
+  <button id="generate-joke-button" onclick="generateJoke()">Get a Joke</button>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1703836216243372"
        crossorigin="anonymous"></script>
