--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body class="bg-gradient-to-br from-purple-100 to-blue-100 min-h-screen">
@@ -164,7 +164,13 @@
             <h2 class="text-3xl font-bold text-purple-800 mb-4">Want More Laughs?</h2>
             <p class="text-xl text-gray-700 mb-6">Subscribe to our daily joke newsletter!</p>
             <div class="max-w-md mx-auto bg-white rounded-lg shadow-md overflow-hidden p-6">
-                <form id="subscribe-form" class="space-y-4">
+                <form id="subscribe-form" class="space-y-4" method="POST" data-netlify="true"
+                    netlify-honeypot="bot-field">
+                    <!-- Hidden honeypot field for spam -->
+                    <input type="hidden" name="form-name" value="subscribe">
+                    <div hidden>
+                        <label>Don't fill this out: <input name="bot-field"></label>
+                    </div>
                     <input type="email" placeholder="Your email address"
                         class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500">
                     <button type="submit"
