gitcommit -m "need backend setpu later"

--- a/index.html
+++ b/index.html
@@ -186,17 +186,25 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
-                    <div class="flex items-center space-x-2">
+                    <div class="flex justify-items-end space-x">
                         <i class="fas fa-laugh-squint text-2xl"></i>
                         <span class="text-xl font-bold">Laugh Factory</span>
                     </div>
                     <p class="text-gray-400 mt-2">Making the world happier, one joke at a time.</p>
+                    <p class="text-gray-400 mt-2">By Sufiyan</p>
+                </div>
+                <div class="flex justify-items-center  items-center ">
+                    <a href="https://www.buymeacoffee.com/yourusername" target="_blank" style="text-decoration: none;">
+                        <button
+                            style="background-color:#FFDD00; color:#000; padding:10px 20px; border:none; border-radius:5px; font-weight:bold;">
+                            ☕ Buy Me a Coffee
+                        </button>
+                    </a>
                 </div>
                 <div class="flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-6 pt-6 text-center text-gray-400">
