need backend setup later

--- a/index.html
+++ b/index.html
@@ -186,17 +186,17 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
-                    <div class="flex justify-items-end space-x">
+                    <div class="flex justify-items-end space-x-2">
                         <i class="fas fa-laugh-squint text-2xl"></i>
                         <span class="text-xl font-bold">Laugh Factory</span>
                     </div>
                     <p class="text-gray-400 mt-2">Making the world happier, one joke at a time.</p>
                     <p class="text-gray-400 mt-2">By Sufiyan</p>
                 </div>
-                <div class="flex justify-items-center  items-center ">
+                <div class="mb-4 md:mb-0 ">
                     <a href="https://www.buymeacoffee.com/yourusername" target="_blank" style="text-decoration: none;">
                         <button
-                            style="background-color:#FFDD00; color:#000; padding:10px 20px; border:none; border-radius:5px; font-weight:bold;">
+                            style="background-color:#0713f5; color:#000; padding:10px 20px; border:none; border-radius:5px; font-weight:bold;">
                             ☕ Buy Me a Coffee
                         </button>
                     </a>
