--- a/frontend/index.html
+++ b/frontend/index.html
@@ -193,14 +193,14 @@
                     <p class="text-gray-400 mt-2">Making the world happier, one joke at a time.</p>
                     <p class="text-gray-400 mt-2">By Sufiyan</p>
                 </div>
-                <div class="mb-4 md:mb-0 ">
+                <!-- <div class="mb-4 md:mb-0 ">
                     <a href="https://www.buymeacoffee.com/yourusername" target="_blank" style="text-decoration: none;">
                         <button
                             style="background-color:#0713f5; color:#000; padding:10px 20px; border:none; border-radius:5px; font-weight:bold;">
                             ☕ Buy Me a Coffee
                         </button>
                     </a>
-                </div>
+                </div> -->
                 <div class="flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
